--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
         <main class="main">
             КОНТЕНТ
         </main>
+        
+        <footer class="footer">
+    <h1 class="footer_title">Типа футер</h1>
+    <div class="footer__img-wrap">
+        <img src="https://kartinki-cvetov.ru/rozy/roza_37.jpg" alt="">
+    </div>
+        </footer>
     </body>
 </html>
